# rust-kafka-lambda

./: .gitignore  .releaserc.json  CHANGELOG.md  Cargo.toml  Cross.toml  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: build-release.yml  dependabot-pr.yml  push-stage.yml
cross/: aarch64-dockerfile  x86_64-dockerfile
schema/: product.json
src/: lib.rs  main.rs
src/adapter/: dynamodb_store_converted_product_service.rs  kafka_notify_update_product_service.rs  mod.rs
src/business/: convert_use_case.rs  mod.rs  save_converted_product_use_case.rs
src/controller/: lambda_kafka_event_controller.rs  mod.rs
src/domain/: converted_product.rs  kafka_event.rs  mod.rs  product.rs  product_event.rs
src/handler/: lambda_kafka_event_handler.rs  mod.rs
src/services/: mod.rs  notify_update_product_service.rs  store_converted_product_service.rs
tests/: integration_test.rs  kafka.rs  localstack.rs
tests/data/: product1.json
