[package]
name = "rust_kafka_lambda"
version = "1.0.153"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schemafy = "0.6.0"
schemafy_core = { version = "0.6.0" }
serde = "1.0.197"
serde_json = "1.0.114"
serde_derive = "1.0.197"
chrono = "0.4.35"
aws-config = "1.1.8"
aws-sdk-dynamodb = "1.18.0"
h2 = "^0.4.2" # transient update for RUSTSEC-2024-0003
lambda_runtime = "0.10.0"
aws_lambda_events = "0.15.0"
tokio = { version = "1.36.0", features = ["full"] }
rdkafka = { version = "0.36.2", features = ["ssl", "gssapi-vendored"] }
async-trait = "0.1.77"
strum_macros = "0.26.2"
futures = "0.3.30"
log = "0.4.21"
slog = "2.7.0"
slog-json = "2.6.1"
slog-term = "2.9.1"
slog-async = "2.8.0"
slog-stdlog = "4.1.1"
slog-scope = "4.4.0"
slog-envlogger = "2.2.0"
lib-base64 = "2.1.0"

[dev-dependencies]
testcontainers = "0.15.0"
http = "1.1.0"
