[package]
name = "rust_kafka_lambda"
version = "1.0.154"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schemafy = "0.6.0"
schemafy_core = { version = "0.6.0" }
serde = "1.0.197"
serde_json = "1.0.115"
serde_derive = "1.0.197"
chrono = "0.4.37"
aws-config = "1.1.9"
aws-sdk-dynamodb = "1.20.0"
h2 = "^0.4.4" # transient update for RUSTSEC-2024-0003
lambda_runtime = "0.11.1"
aws_lambda_events = "0.15.0"
tokio = { version = "1.37.0", features = ["full"] }
rdkafka = { version = "0.36.2", features = ["ssl", "gssapi-vendored"] }
async-trait = "0.1.79"
strum_macros = "0.26.2"
futures = "0.3.30"
lib-base64 = "2.1.0"

[dev-dependencies]
testcontainers = "0.15.0"
http = "1.1.0"
tracing-subscriber = "0.3.18"
