[package]
name = "rust_kafka_lambda"
version = "1.0.156"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schemafy = "0.6.0"
schemafy_core = { version = "0.6.0" }
serde = "1.0.201"
serde_json = "1.0.115"
serde_derive = "1.0.201"
chrono = "0.4.38"
aws-config = "1.4.0"
aws-sdk-dynamodb = "1.27.0"
h2 = "^0.4.4" # transient update for RUSTSEC-2024-0003
lambda_runtime = "0.11.2"
aws_lambda_events = "0.15.1"
tokio = { version = "1.37.0", features = ["full"] }
rdkafka = { version = "0.36.2", features = ["ssl", "gssapi-vendored"] }
async-trait = "0.1.80"
strum_macros = "0.26.2"
futures = "0.3.30"
lib-base64 = "2.1.0"

[dev-dependencies]
testcontainers = "0.16.7"
http = "1.1.0"
tracing-subscriber = "0.3.18"
